adjustment for IE scrollbar issue

--- a/assets/scss/03-organisms/_contact-list.scss
+++ b/assets/scss/03-organisms/_contact-list.scss
@@ -2,6 +2,7 @@
   &:not(.ma__contact-list--view-specific) {
     overflow: auto;
     -ms-overflow-style: none;
+    -ms-scroll-limit: 0 0 0 0;
   }
 
   .sidebar & {
